# AMT_Adaptive-Multi-Sample-Testing

./: .gitignore  README.md  color_helper.py  compress_npy.py  help_version_rename.py  helper.py  helper_reduce_reps.py  plot_alpha.py  plot_alpha_ablation_alphac.py  plot_alpha_ablation_prior.py  plot_alpha_annytime.py  plot_alpha_n.py  plot_alpha_over_p.py  plot_alpha_sel.py  plot_alpha_tests.py  plot_betabinH0.py  plot_coin_selection_beta.py  plot_coin_selection_max_ratio.py  plot_coin_selection_max_vs_plated.py  plot_coin_selection_sel_ratio.py  plot_data_caracteristics.py  plot_dataloss_over_p.py  plot_dataloss_over_p_diff.py  plot_dist_diff.py  plot_dist_diff_betabinomsingle.py  plot_dist_diff_equal_vs_beta.py  plot_multi_tests.py  plot_null_dist_chi2.py  plot_null_dist_chi2_dof.py  plot_null_dist_chi2_itterations.py  plot_power.py  plot_power_ablation_alphac.py  plot_power_ablation_prior.py  plot_power_annytime.py  plot_power_bandit.py  plot_power_equal_vs_beta.py  plot_power_equal_vs_beta_real.py  plot_power_full_bandit_vs_ours.py  plot_power_n.py  plot_power_over_all_selection.py  (+53 more)
amt/: bandit_bounds.py  coin_weights.py  configuration.py  multitest.py  multitest_runner.py  permutation_test_runner.py  sel_runner.py  selection.py  test_runner.py  test_statistics.py  tests.py  utils.py
atm/: configuration.py  multitest.py  multitest_runner.py  permutation_test_runner.py  sel_runner.py  selection.py  test.py  test_runner.py  utils.py
