[tool.poetry]
name = "AMT"
version = "0.2.0"
description = "Adaptive multi-sample testing"
authors = ["anonym127 <anonym127@outlook.de>"]
license = "MIT"
packages = [
    { include = "amt", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.0.2"
scipy = "^1.13.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
